--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "ArtDaSak",
   "license": "ISC",
-  "description": "",
+  "description": "Gestor de Tareas por Consola",
   "dependencies": {
     "inquirer": "^12.8.2"
   }
